2007-04-17  Atsushi Enomoto  <atsushi@ximian.com>

	* ConfigurationSectionCollection.cs : GetEnumerator() should return
	  IEnumerator for the items, not keys.
	* ConfigurationProperty.cs : more helpful type mismatch message.

2007-04-16  Marek Habersack  <mhabersack@novell.com>

	* SectionGroupInfo.cs: another (and final, hopefully) fix for bug
	#81321 and several other related issues that were discovered by
	the way. Thanks to Atsushi for help with XmlReader!

2007-04-15  Marek Habersack  <mhabersack@novell.com>

	* SectionGroupInfo.cs: another incarnation of the fix for bug
	#81321.

2007-04-12  Marek Habersack  <mhabersack@novell.com>

	* SectionGroupInfo.cs: a better fix for #81321

2007-04-10  Marek Habersack  <mhabersack@novell.com>

	* SectionGroupInfo.cs: make sure empty sections with the
	short-circuit tag ends (<section/>) don't make the process loop
	endlessly. Fixes bug #81321.

2007-03-22  Konstantin Triger <kostat@mainsoft.com>

	* ConfigInfo.cs: should be able instantiate types with private ctors.

2007-03-19  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* ConfigurationSectionCollection.cs,
	* ConfigurationSectionGroupCollection.cs,
	* PropertyInformationCollection.cs, 
	* SectionGroupInfo.cs: used StringComparer.Ordinal instead of
	OrdinalComparer

2007-03-15  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* ConfigurationSectionCollection.cs,
	* ConfigurationSectionGroupCollection.cs,
	* PropertyInformationCollection.cs, 
	* SectionGroupInfo.cs: these collections should be based on case
	insensitive NameObjectCollectionBase
	* added OrdinalComparer.cs for use in NameObjectCollectionBase

2007-02-07  Atsushi Enomoto  <atsushi@ximian.com>

	* SectionInfo.cs : don't stop at restartOnExternalChanges attribute.

2007-01-16  Konstantin Triger <kostat@mainsoft.com>

	* ConfigurationElement.cs: ignore properties with null or empty name.

2007-01-16  Konstantin Triger <kostat@mainsoft.com>
